--- a/wercker.yml
+++ b/wercker.yml
@@ -5,7 +5,7 @@ build:
     steps:
         - script:
             name: install
-            code: go get code.google.com/p/gogoprotobuf/proto && go get -d -u -t github.com/philhofer/rkive/... && go install github.com/philhofer/rkive/...
+            code: go get code.google.com/p/gogoprotobuf/proto && go get -u github.com/philhofer/rkive/rpbc
         - script:
             name: test
             code: go test -v -tags 'riak'
