--- a/wercker.yml
+++ b/wercker.yml
@@ -5,7 +5,7 @@ build:
     steps:
         - script:
             name: install-dep
-            code: go get -d ./...
+            code: go get -d -t ./...
         - script:
             name: test
             code: go test -v -tags 'riak'
