--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
  - go get code.google.com/p/gogoprotobuf/proto
  - go install ./...
 script:
- - go test -v -tags 'riak' -check.v
+ - go test -v -tags 'riak' -check.vv
